--- a/styles/style.scss
+++ b/styles/style.scss
@@ -137,12 +137,12 @@
         flex-direction: column;
         align-items: center;
         padding: 1.5rem 0;
-
+        
         background: rgba(249, 249, 249, 0.94);
         box-shadow: 0px 0.3333px 0px rgba(0, 0, 0, 0.3);
         backdrop-filter: blur(27.1828px);
-
-
+        
+        
         img{
             height: 45px;
             width: 45px;
@@ -153,6 +153,28 @@
             line-height: 1rem;
             color: #000000;
             margin-top: .5rem;
+        }
+        .avatar-container{
+            position: relative;
+
+            .active-status {
+                width: .6rem;
+                height: .6rem;
+                border-radius: 100%;
+                background-color: none;
+                position: absolute;
+                top: 35px;
+                right: 5px;
+            }
+            .active-status.active{
+                background-color: green;
+            }
+            .active-status.recent-active{
+                background-color: orange;
+            }
+            .active-status.offline{
+                background-color: grey;
+            }
         }
     }
 
