--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,6 +1,3 @@
 @import "./Home/home_style.scss";
 @import "./Sign/sign_style.scss";
-
-form input {
-    border: 1px solid;
-}
+@import "./form_styling.scss";
