--- a/styles/globals.css
+++ b/styles/globals.css
@@ -97,69 +97,69 @@ a {
   display: none;
 }
 
-.mr-05 {
-  margin-right: 0.5rem;
-}
-.mr-1 {
-  margin-right: 1rem;
-}
-.ml-05 {
-  margin-left: 0.5rem;
-}
-.ml-1 {
-  margin-left: 1rem;
-}
+.m-auto {margin: auto;}
+
+.mt-1 {margin-top: 1rem;}
+.mt-2 {margin-top: 2rem;}
+.mt-3 {margin-top: 3rem;}
+.mt-4 {margin-top: 4rem;}
+.mt-5 {margin-top: 5rem;}
+
+.mb-1 {margin-bottom: 1rem;}
+.mb-2 {margin-bottom: 2rem;}
+.mb-3 {margin-bottom: 3rem;}
+.mb-4 {margin-bottom: 4rem;}
+.mb-5 {margin-bottom: 5rem;}
+
+.m-1 {margin: 1rem;}
+.m-2 {margin: 2rem;}
+.m-3 {margin: 3rem;}
+.m-4 {margin: 4rem;}
+.m-5 {margin: 5rem;}
+
+.my-1 {margin: 1rem 0;}
+.my-2 {margin: 2rem 0;}
+.my-3 {margin: 3rem 0;}
+.my-4 {margin: 4rem 0;}
+.my-5 {margin: 5rem 0;}
+
+.mx-1 {margin: 0 1rem;}
+.mx-2 {margin: 0 2rem;}
+.mx-3 {margin: 0 3rem;}
+.mx-4 {margin: 0 4rem;}
+.mx-5 {margin: 0 5rem;}
 
 
-.mt-05 {
-  margin-top: 0.5rem;
-}
-.mt-1 {
-  margin-top: 1rem;
-}
-.mt-2 {
-  margin-top: 2rem;
-}
+.pt-1 {padding-top: 1rem;}
+.pt-2 {padding-top: 2rem;}
+.pt-3 {padding-top: 3rem;}
+.pt-4 {padding-top: 4rem;}
+.pt-5 {padding-top: 5rem;}
 
-.m-auto {
-  margin: auto;
-}
+.pb-1 {padding-bottom: 1rem;}
+.pb-2 {padding-bottom: 2rem;}
+.pb-3 {padding-bottom: 3rem;}
+.pb-4 {padding-bottom: 4rem;}
+.pb-5 {padding-bottom: 5rem;}
 
-.m-1 {
-  margin: 1rem;
-}
-.m-2 {
-  margin: 2rem;
-}
-.m-3 {
-  margin: 3rem;
-}
-.m-4 {
-  margin: 4rem;
-}
-.m-5 {
-  margin: 5rem;
-}
+.pl-1 {padding-left: 1rem;}
+.pl-2 {padding-left: 2rem;}
+.pl-3 {padding-left: 3rem;}
+.pl-4 {padding-left: 4rem;}
+.pl-5 {padding-left: 5rem;}
 
-.mb-1 {
-  margin-bottom: 1rem;
-}
-.pt-1 {
-  padding-top: 1rem;
-}
-.pt-2 {
-  padding-top: 2rem;
-}
-.pt-3 {
-  padding-top: 3rem;
-}
-.px-1 {
-  padding: 0 1rem;
-}
+.pr-1 {padding-right: 1rem;}
+.pr-2 {padding-right: 2rem;}
+.pr-3 {padding-right: 3rem;}
+.pr-4 {padding-right: 4rem;}
+.pr-5 {padding-right: 5rem;}
 
-.min-h {
-  min-height: calc(100vh - 65px);
-}
+.p-1 {padding: 1rem;}
+.p-2 {padding: 2rem;}
+.p-3 {padding: 3rem;}
+.p-4 {padding: 4rem;}
+.p-5 {padding: 5rem;}
+
 
 .c-pointer {
   cursor: pointer;
@@ -233,3 +233,31 @@ input, select, option {
 body {
   background-color: #dddddd;
 }
+
+
+
+/* 
+
+
+useEffect(() => {
+  let arry = [
+    ["pt", "padding-top"],
+    ["pb", "padding-bottom"],
+    ["pl", "padding-left"],
+    ["pr", "padding-right"],
+    ["p", "padding"],
+  ]
+  for (let n = 0; n < arry.length; n++) {
+    for (let i = 1; i < 6; i++) {
+      console.log(`.${arry[n][0]}-${i} {${arry[n][1]}: ${i}rem;}`)
+    }
+    
+  }
+}, []) 
+
+
+  for (let i = 1; i < 6; i++) {
+    console.log(`.mx-${i} {margin: 0 ${i}rem;}`)
+  }
+
+*/
