--- a/styles/Sign/sign_style.scss
+++ b/styles/Sign/sign_style.scss
@@ -20,8 +20,13 @@
             font-weight: 600;
             text-align: center;
         }
+        p{
+            font-size: 1rem;
+            text-align: center;
+        }
 
     }
+
 
     .other-social-sign-in-option{
         display: flex;
