--- a/styles/form_styling.scss
+++ b/styles/form_styling.scss
@@ -1,9 +1,19 @@
 $color1 : royalblue;
 $white : white;
 
+$radio-size : 1rem;
+$radio-border-color: #D8DADC;
+
 $input-border: 1px solid #D8DADC;
+
 $input-border-focus: 1px solid royalblue;
 $input-border-error: 1px solid red;
+
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
 
 .form-row{
     display: flex;
@@ -135,5 +145,68 @@ form button {
 
     .toggle__input:checked ~ .toggle__fill::after {
         transform: translateX(var(--height));
+    }
+}
+
+.html_input_radio {
+    gap: 0.5em;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+
+    input[type="radio"] {
+        -webkit-appearance: none;
+        appearance: none;
+        background-color: #fff;
+        
+        width: $radio-size;
+        height: $radio-size;
+
+        border: 2px solid $radio-border-color;
+        border-radius: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+        &::before {
+            content: "";
+            width: calc($radio-size * .5);
+            height: calc($radio-size * .5);
+            background-color: white;
+            border-radius: 100%;
+            
+            // transition: 120ms transform ease-in-out;
+        }
+        
+        &:checked::before {
+            background-color: red;
+        }
+    }
+
+}
+
+.mobile-form-feilds{
+    input[type="text"]{
+        border: 1px solid grey;
+    }
+    .feild-label{
+        display: block;
+        margin-bottom: .5rem;
+        font-size: .9rem;
+        font-weight: 600;
+    }
+    .input{
+        border: 1px solid;
+        display: flex;
+        select{
+            opacity: .1;
+            width: 100px;
+        }
+
+        .option {
+            display: flex;
+            justify-content: space-between;
+            width: 500px;
+        }
     }
 }
